--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,57 @@
 /*
 font-family: 'Playfair Display', serif;
 font-family: 'Poppins', sans-serif;*/
-h1 {
-  font-family: "Poppins", sans-serif;
-  font-weight: bold;
+:root {
+  --default-font-family: "Poppins", sans-serif;
+  --heading-font-family: "Playfair Display", serif;
+  --branding-color: #6c63ff;
+  --secondary-color: #f9f7fe;
+}
+body {
+  font-family: var(--default-font-family)
+  font-weight: normal;
 }
 
-p {
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: var(--default-font-family);
+  font-weight: bold;
+  color: black;
+}
+
+h1 {
+  font-family: var(--heading-font-family); 
+  font-size: 96px;
+}
+
+.hero {
+  background: var(--secondary-color);
+  text-align: center;
+  padding: 160px 20px;
+}
+
+.hero p {
+  font-size: 36px;
+  font-weight: bold;
+  margin: 0px;
+  color: #272142;
+}
+
+.hero h2 {
+  font-family: var(--default-font-family);
   font-weight: normal;
+  font-size: 24px;
+  line-height: 2;
+}
+
+.btn-branding {
+  background: var(--branding-color);
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
+  border-radius: 4px;
+  padding: 15px 30px;
 }
