--- a/styles/style.css
+++ b/styles/style.css
@@ -48,7 +48,8 @@ p {
   color: #272142;
 }
 
-.hero h2 {
+.hero h2,
+.about-section h2 {
   font-family: var(--default-font-family);
   font-weight: normal;
   font-size: 24px;
@@ -82,6 +83,19 @@ img {
   max-width: 100%;
 }
 
+.about-section {
+  padding: 160px 20px;
+}
+
+.about-section h1 {
+  font-size: 64px;
+  line-height: 75px;
+}
+
+.about-description {
+  margin: 30px;
+}
+
 @media (max-width: 991px) {
   h1 {
     font-size: 44px;
@@ -98,5 +112,10 @@ img {
   .project-description {
     text-align: center;
     padding: 25px 20px;
+  }
+
+  .about-section {
+    text-align: center;
+    padding: 20px;
   }
 }
