--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@ p {
 }
 
 .hero h2,
-.about-section h2 {
+.content-container h2 {
   font-family: var(--default-font-family);
   font-weight: normal;
   font-size: 24px;
@@ -83,22 +83,34 @@ img {
   max-width: 100%;
 }
 
-.about-section {
+.content-container {
   padding: 160px 20px;
 }
 
-.about-section h1 {
+.content-container h1 {
   font-size: 64px;
   line-height: 75px;
 }
 
-.about-description {
+.content h3 {
+  font-size: 24px;
+  line-height: 1.5;
+  font-family: var(--default-font-family);
+}
+
+.content p {
+  font-size: 18px;
+}
+
+.content {
   margin: 30px;
 }
 
 @media (max-width: 991px) {
-  h1 {
+  h1,
+  .content-container h1 {
     font-size: 44px;
+    line-height: 1.3;
   }
 
   h2 {
@@ -114,7 +126,7 @@ img {
     padding: 25px 20px;
   }
 
-  .about-section {
+  .content-container {
     text-align: center;
     padding: 20px;
   }
